2008-07-23  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.6.

==================== 2.23.5 ====================

2008-07-23  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.5

2008-06-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.5.

==================== 2.23.4 ====================

2008-06-17  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.4

2008-06-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require intltool 0.40.0
	* Makefile.am: remove old intltool cruft

2008-06-05  Vincent Untz  <vuntz@gnome.org>

	* configure.in: updated for gnome-panel/libpanel-util/

2008-06-03  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.4.

==================== 2.23.3 ====================

2008-06-03  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.3

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.3.

==================== 2.23.2.1 ====================

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.2.1

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.3.

==================== 2.23.2 ====================

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.2

2008-04-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.2.

==================== 2.23.1 ====================

2008-04-21  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.1

2008-04-15  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.2.

==================== 2.22.1.3 ====================

2008-04-15  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.22.1.3

2008-04-10  Lucas Rocha  <lucasr@gnome.org>
