@@ -52,7 +52,7 @@ LIBGNOME_DESKTOP_REQUIRED=2.11.1
 GDK_PIXBUF_REQUIRED=2.7.1
 PANGO_REQUIRED=1.15.4
 GLIB_REQUIRED=2.15.6
-GTK_REQUIRED=2.11.3
+GTK_REQUIRED=2.13.1
 LIBGLADE_REQUIRED=2.5.0
 LIBGNOME_REQUIRED=2.13.0
 LIBGNOMEUI_REQUIRED=2.5.4
