@@ -1,5 +1,12 @@
 2008-08-03  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-menu-items.c: (panel_menu_item_mount_volume): use
+	GtkMountOperation
+	* panel-mount-operation.[ch]: kill those files
+	* Makefile.am: updated
+
+2008-08-03  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-multiscreen.c: (panel_multiscreen_x),
 	(panel_multiscreen_y), (panel_multiscreen_width),
 	(panel_multiscreen_height),
