@@ -1,3 +1,7 @@
+2008-08-03  Vincent Untz  <vuntz@gnome.org>
+
+	* configure.in: require GTK+ 2.13.1 for GtkMountOperation
+
 2008-07-23  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.23.6.
